[project]
name = "aaa-issue-refactor"
version = "0.1.0"
description = "Python CLI tool for automatically refactoring Java test cases using LLMs to eliminate AAA pattern violations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.0.0",
    "PyYAML>=6.0.1"
]

[project.scripts]
aif = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
package = true

[tool.uv.sources]
"aif" = { path = "src" }
